arreglos-de-css

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="icon" href=""><!-- icono de la pagina -->
 </head>
 <body>
-<!-- vertical -->
-                <div class="html-horz">
+<!-- horizontal -->
 
 <!-- Header -->
 <header class="position-header"> <!-- de momento se opto blanco - a cambiar por transparente con scroll* -->
@@ -56,7 +55,6 @@
 
 <!-- main -->
 <main>
-    </button>
     <!-- Home//Inicio -->
     <section>
         <div class="Home-section">
@@ -154,7 +152,6 @@
         <div class="logo-partner">
             6
         </div> -->
-    </div>
     </section>
 
     <section>
@@ -255,11 +252,11 @@
                 </div>
 
                     <!-- btn-fixed -->
-                    <button class="btn-fixed">
-                        <a href="">
-                            <i class="bi bi-ui-radios-grid"></i> Preguntale a Kodee
-                        </a>
-                    </button>
+    <button class="btn-fixed">
+        <a href="">
+            <i class="bi bi-ui-radios-grid"></i>Preguntale a Kodee
+        </a>
+    </button>
     <!-- pre-footter -->
     
     
